--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,12 @@ Header
 
 }
 
+.wifi p{
+
+    font-size: 100px;
+
+}
+
 /*==================================
 Main
 ===================================*/
